# ttdl

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  changelog  intro.md  justfile  rustfmt.toml  ttdl.toml
.github/workflows/: ci.yaml  quickstart.yml
src/: agenda.rs  cal.rs  colauto.rs  conf.rs  conv.rs  date_expr.rs  flt.rs  fmt.rs  human_date.rs  main.rs  md.rs  stats.rs  subj_clean.rs  tml.rs
