[package]
name = "ttdl"
version = "0.9.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"
keywords = ["todotxt", "terminal", "cli", "todo"]
license = "MIT"
description = "TTDL - Terminal ToDo List manager"
readme = "intro.md"
repository = "https://github.com/VladimirMarkelov/ttdl"
categories = ["command-line-utilities"]

[profile.release]
lto = true

[dependencies]
todo_lib = "0.3"
getopts = "0.2"
chrono = "^0.4"
textwrap = "0.11"
lazy_static = "1.0"
caseless = "0.2.1"
dirs = "1.0"
toml = "0.4"
atty = "0.2"
term_size = "0.3.1"
termcolor = "1.0.4"
serde = "1.0"
serde_derive = "1.0.84"
json = "0.12"

[dependencies.todo-txt]
version = "2.0"
features = ["extended"]

[package.metadata.deb]
section = "utility"
depends = "$auto"
priority = "optional"
assets = [
	["target/release/ttdl", "usr/bin/", "755"],
	["LICENSE", "usr/share/doc/ttdl/", "644"],
	["README.md", "usr/share/doc/ttdl/README", "644"],
	["ttdl.toml", "usr/share/doc/ttdl/ttdl.toml", "644"],
]
extended-description = """\
A powerful terminal todo list manager. It keeps the list in todo.txt format.\
"""
changelog = "changelog"
