[package]
name = "ttdl"
version = "4.4.1"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2021"
keywords = ["todotxt", "terminal", "cli", "todo", "tasks"]
license = "MIT"
description = "TTDL - Terminal ToDo List manager"
readme = "intro.md"
repository = "https://github.com/VladimirMarkelov/ttdl"
categories = ["command-line-utilities"]

[profile.release]
lto = true
strip = "debuginfo"

[dependencies]
todo_lib = "7.2.0"
getopts = "^0.2"
chrono = "^0.4"
textwrap = "^0.16"
lazy_static = "1"
caseless = "^0.2"
dirs = "5"
toml = "^0.8"
term_size = "^0.3"
termcolor = "1"
serde = "1"
serde_derive = "1"
json = "^0.12"
unicode-width="^0.2"
anyhow = "1"

[package.metadata.deb]
section = "utility"
depends = "$auto"
priority = "optional"
assets = [
	["target/release/ttdl", "usr/bin/", "755"],
	["LICENSE", "usr/share/doc/ttdl/", "644"],
	["README.md", "usr/share/doc/ttdl/README", "644"],
	["ttdl.toml", "usr/share/doc/ttdl/ttdl.toml", "644"],
]
extended-description = """\
A powerful terminal todo list manager. It keeps the list in todo.txt format.\
"""
changelog = "changelog"
